--- a/.github/settings.json
+++ b/.github/settings.json
@@ -1,7 +1,7 @@
 {
   "repository": {
-    "name": "Patternugit",
-    "description": "Preconfigured pattern for your repository with universal cases for markdown files of documentations and other actions/scripts",
+    "name": "meteospax-development.template",
+    "description": "Special repository for identifying the template of other projects and repositories within the METEOSPAX ecosystem and its attributes",
     "homepage": "",
     "topics": [
       "github",
@@ -17,10 +17,10 @@
       "workflows-reusable"
     ],
     "private": false,
-    "has_issues": true,
-    "has_projects": true,
+    "has_issues": false,
+    "has_projects": false,
     "has_wiki": false,
-    "has_downloads": true,
+    "has_downloads": false,
     "default_branch": "main",
     "allow_squash_merge": true,
     "allow_merge_commit": true,
