--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,10 +2,10 @@
 
 repository:
   # The name of the repository. Changing this will rename the repository
-  name: Patternugit
+  name: meteospax-development.template
 
   # A short description of the repository that will show up on GitHub
-  description: Preconfigured pattern for your repository with universal cases for markdown files of documentations and other actions/scripts
+  description: Special repository for identifying the template of other projects and repositories within the METEOSPAX ecosystem and its attributes
 
   # A URL with more information about the repository
   homepage:
@@ -17,17 +17,17 @@ repository:
   private: false
 
   # Either `true` to enable issues for this repository, `false` to disable them.
-  has_issues: true
+  has_issues: false
 
   # Either `true` to enable projects for this repository, or `false` to disable them.
   # If projects are disabled for the organization, passing `true` will cause an API error.
-  has_projects: true
+  has_projects: false
 
   # Either `true` to enable the wiki for this repository, `false` to disable it.
   has_wiki: false
 
   # Either `true` to enable downloads for this repository, `false` to disable them.
-  has_downloads: true
+  has_downloads: false
 
   # Updates the default branch for this repository.
   default_branch: main
