--- a/.github/web-settings.json
+++ b/.github/web-settings.json
@@ -1,5 +1,5 @@
 {
-  "repository_name": "Patternugit",
+  "repository_name": "meteospax-development.template",
   "visibility": "public",
   "default_branch": "main",
   "danger_zone": {
@@ -9,14 +9,14 @@
   },
   "features": {
     "wikis": {
-      "enabled": true,
+      "enabled": false,
       "restrict_editing_to_collaborators": true
     },
-    "issues": true,
+    "issues": false,
     "sponsorships": false,
     "preserve_repository": true,
-    "discussions": true,
-    "projects": true
+    "discussions": false,
+    "projects": false
   },
   "pull_requests": {
     "allow_merge_commits": {
